paar fixes